# ProjectAstra

./: DEVELOPMENT_PLAN.md  README.MD  docker-compose.yml
PA_AI_Chatbot/: Dockerfile  config.py  main.py  models.py  ncc_service.py
PA_Backend/: .dockerignore  Dockerfile  README.md  agent.py  agent_tools.py  config.py  database.py  docker-compose.yml  main.py  models.py  ncc_service.py  pyproject.toml  requirements.txt
PA_Backend/ncc/: inference.py
PA_Backend/routers/: auth.py  brave_search.py  calendar.py  calendar_crud.py  calendar_schemas.py  chat.py  coding.py  coding_crud.py  coding_schemas.py  documents.py  documents_crud.py  documents_schemas.py  email.py  email_crud.py  email_schemas.py  jira.py  messages.py  onedrive.py  outlook.py  tasks.py  tasks_crud.py  tasks_schemas.py  todo.py
PA_Backend/routers/finance/: ai.py  crud.py  finance.py  plaid.py  reports.py  schemas.py  security.py
PA_Backend/services/: gcp_llm_service.py  local_llm_service.py
PA_Backend/static/: index.html
PA_Flutter/: Dockerfile  README.md  firebase.json  pubspec.yaml
PA_Flutter/android/app/: build.gradle.kts  google-services.json
PA_Flutter/ios/Runner/: Info.plist
PA_Flutter/ios/Runner.xcodeproj/: project.pbxproj
PA_Flutter/lib/: app_shell.dart  firebase_options.dart  main.dart
PA_Flutter/lib/models/: application_context.dart  application_context.g.dart  chat_models.dart  chat_models.g.dart  document_models.dart  email_models.dart  finance_models.dart  task_models.dart
PA_Flutter/lib/routes/: app_routes.dart
PA_Flutter/lib/services/: application_context_notifier.dart  auth_service.dart  chat_api_service.dart  document_service.dart  email_service.dart  finance_api_service.dart  frontend_local_ai_agent.dart  pfp_service.dart  task_service.dart
PA_Flutter/lib/theme/: app_colors.dart  app_theme.dart  app_themes.dart  theme_notifier.dart  theme_parser.dart
PA_Flutter/lib/widgets/auth/: auth_gate.dart  auth_modal.dart
PA_Flutter/lib/widgets/chat/: chat_app_bar.dart  chat_input_bar.dart  chat_message_bubble.dart  chat_panel.dart  code_element_highlighter.dart
PA_Flutter/lib/widgets/main_content/: main_content_desktop.dart
PA_Flutter/lib/widgets/navbar/: desktop_navbar.dart  mobile_navbar.dart
PA_Flutter/lib/widgets/pages/: ai_finance_page.dart  budget_page.dart  calendar_page.dart  calender_page.dart  chat_page_mobile.dart  code_page.dart  collaborative_finance_page.dart  docs_page.dart  email_page.dart  finance_dashboard_screen.dart  finance_page.dart  (+6 more)
PA_Flutter/linux/: CMakeLists.txt
PA_Flutter/linux/flutter/: generated_plugins.cmake
PA_Flutter/linux/runner/: my_application.cc
PA_Flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
PA_Flutter/macos/Runner.xcodeproj/: project.pbxproj
PA_Flutter/test/: widget_test.dart
PA_Flutter/web/: index.html  manifest.json
PA_Flutter/windows/: CMakeLists.txt
PA_Flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
PA_Flutter/windows/runner/: Runner.rc  main.cpp
PA_Java_Services/auth-service/: Dockerfile  pom.xml
PA_Java_Services/finance-service/: pom.xml
PA_Marketing_Site/: nuxt.config.ts  package.json
(+13 files in other folders)
